zellij-server/src/tab/unit/snapshots/zellij_server__tab__layout_applier_tests__apply_empty_layout.snap
---
source: zellij-server/src/tab/./unit/layout_applier_tests.rs
expression: snapshot
---
VIEWPORT: x=0, y=0, cols=100, rows=50
DISPLAY: cols=100, rows=50
FOCUS: None

TILED PANES (0)
