zellij-server/src/tab/unit/snapshots/zellij_server__tab__layout_applier_tests__apply_layout_with_floating_pane_with_command.snap
---
source: zellij-server/src/tab/./unit/layout_applier_tests.rs
expression: "take_pane_state_snapshot(&tiled_panes, &floating_panes, &focus_pane_id,\n&viewport, &display_area,)"
---
VIEWPORT: x=0, y=0, cols=100, rows=50
DISPLAY: cols=100, rows=50
FOCUS: None

TILED PANES (1)
  Terminal(1):
    geom: x=0, y=0, cols=100, rows=50
    logical_position: 0
    run: None
    selectable: true
    title: Pane #1
    borderless: false

FLOATING PANES (1)
  Terminal(2):
    geom: x=10, y=10, cols=50, rows=25
    logical_position: 0
    run: Command(htop)
    pinned: false
    selectable: true
    title: htop
    borderless: false
